[gd_scene load_steps=12 format=3 uid="uid://b8gnynp4bevu7"]

[ext_resource type="Script" path="res://Application/how_to_recycle.gd" id="1_3f23a"]
[ext_resource type="PackedScene" uid="uid://d4b8037q6kkr0" path="res://Application/template.tscn" id="2_av2rt"]
[ext_resource type="PackedScene" uid="uid://bne7ojpp3gs71" path="res://Application/how_to_recycle_button.tscn" id="3_0fbj2"]
[ext_resource type="Texture2D" uid="uid://2p4qbal2my2n" path="res://Media/Images/bag.png" id="4_371gv"]
[ext_resource type="Texture2D" uid="uid://dcgwb57df6apg" path="res://Media/Images/glass-bottle.png" id="5_n2tew"]
[ext_resource type="Texture2D" uid="uid://c4ve2tl70fbil" path="res://Media/Images/metals.png" id="6_bqmjh"]
[ext_resource type="Texture2D" uid="uid://skdmxmp4ad83" path="res://Media/Images/paper.png" id="7_nq1m6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18y57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h42kt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nx1hr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gd823"]

[node name="HowToRecyle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3f23a")
urlToPlastic = "res://Application/plastic.tscn"
urlToMetal = "res://Application/metal.tscn"
urlToPaper = "res://Application/paper.tscn"
urlToGlass = "res://Application/glass.tscn"
metadata/_edit_vertical_guides_ = [251.0]

[node name="Screen" parent="." instance=ExtResource("2_av2rt")]
layout_mode = 1
urlToMainMenu = "res://Application/main_screen.tscn"

[node name="Plastic" parent="." instance=ExtResource("3_0fbj2")]
layout_mode = 1
offset_left = 81.0
offset_top = 145.0
offset_right = -206.0
offset_bottom = -700.0
scale = Vector2(1.6, 1.6)

[node name="Label" type="Label" parent="Plastic"]
layout_mode = 0
anchor_left = 0.355047
anchor_top = 0.364011
anchor_right = 0.594483
anchor_bottom = 0.616758
theme_override_colors/font_color = Color(0.168627, 0.243137, 0.180392, 1)
text = "Plastic"
metadata/_edit_use_anchors_ = true

[node name="Plastic2" type="Button" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 145.0
offset_right = 422.0
offset_bottom = 291.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_18y57")
theme_override_styles/hover = SubResource("StyleBoxEmpty_18y57")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_18y57")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_18y57")
theme_override_styles/focus = SubResource("StyleBoxEmpty_18y57")

[node name="Metal" parent="." instance=ExtResource("3_0fbj2")]
layout_mode = 1
offset_left = 81.0
offset_top = 309.0
offset_right = -206.0
offset_bottom = -536.0
scale = Vector2(1.6, 1.6)

[node name="Label2" type="Label" parent="Metal"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.355047
anchor_top = 0.350275
anchor_right = 0.594483
anchor_bottom = 0.603022
theme_override_colors/font_color = Color(0.168627, 0.243137, 0.180392, 1)
text = "Metal"
metadata/_edit_use_anchors_ = true

[node name="Metal2" type="Button" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 309.0
offset_right = 422.0
offset_bottom = 455.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h42kt")

[node name="Button3" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.162
anchor_top = 0.505342
anchor_right = 0.856
anchor_bottom = 0.660256
theme_override_styles/normal = SubResource("StyleBoxEmpty_nx1hr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gd823")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nx1hr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nx1hr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nx1hr")
metadata/_edit_use_anchors_ = true

[node name="Paper" parent="." instance=ExtResource("3_0fbj2")]
layout_mode = 1
offset_left = 81.0
offset_top = 473.0
offset_right = -206.0
offset_bottom = -372.0
scale = Vector2(1.6, 1.6)

[node name="Label3" type="Label" parent="Paper"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.349178
anchor_top = 0.336538
anchor_right = 0.898474
anchor_bottom = 0.589286
theme_override_colors/font_color = Color(0.168627, 0.243137, 0.180392, 1)
text = "Paper/Cardbox"
metadata/_edit_use_anchors_ = true

[node name="Paper3" type="Button" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 473.0
offset_right = 422.0
offset_bottom = 619.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h42kt")

[node name="Glass" parent="." instance=ExtResource("3_0fbj2")]
layout_mode = 1
offset_left = 81.0
offset_top = 640.0
offset_right = -206.0
offset_bottom = -205.0
scale = Vector2(1.6, 1.6)

[node name="Label4" type="Label" parent="Glass"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.349178
anchor_top = 2.65797
anchor_right = 0.898474
anchor_bottom = 2.91071
offset_left = -2.28882e-05
offset_top = -206.875
offset_right = -1.52588e-05
offset_bottom = -206.875
theme_override_colors/font_color = Color(0.168627, 0.243137, 0.180392, 1)
text = "Glass
"
metadata/_edit_use_anchors_ = true

[node name="Glass2" type="Button" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 640.0
offset_right = 422.0
offset_bottom = 786.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h42kt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h42kt")

[node name="Bag" type="Sprite2D" parent="."]
position = Vector2(149, 216)
scale = Vector2(0.14, 0.14)
texture = ExtResource("4_371gv")

[node name="Glass-bottle" type="Sprite2D" parent="."]
position = Vector2(150, 711)
scale = Vector2(0.14, 0.14)
texture = ExtResource("5_n2tew")

[node name="Metals" type="Sprite2D" parent="."]
position = Vector2(151, 379)
scale = Vector2(0.14, 0.14)
texture = ExtResource("6_bqmjh")

[node name="Paper2" type="Sprite2D" parent="."]
position = Vector2(148, 544)
scale = Vector2(0.14, 0.14)
texture = ExtResource("7_nq1m6")

[connection signal="pressed" from="Plastic2" to="." method="_on_plastic_2_pressed"]
[connection signal="pressed" from="Metal2" to="." method="_on_metal_2_pressed"]
[connection signal="pressed" from="Paper3" to="." method="_on_paper_3_pressed"]
[connection signal="pressed" from="Glass2" to="." method="_on_glass_2_pressed"]
